Replace std::string by char * and compare strings only by hashes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 find_package (Threads)
 
-set(SOURCE_FILES src/main.cpp src/NgramTree.cpp src/NgramTree.h src/thpool.h src/thpool.c src/Solver.cpp src/Solver.h)
+set(SOURCE_FILES src/main.cpp src/NgramTree.cpp src/NgramTree.h src/HashFunctions.cpp src/HashFunctions.h src/HashTable.cpp src/HashTable.h src/Node.cpp src/Node.h src/SuffixList.cpp src/SuffixList.h)
 add_executable(Ngrams ${SOURCE_FILES})
 
 target_link_libraries (Ngrams ${CMAKE_THREAD_LIBS_INIT})
